--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 .search-button {
-  border-radius: 5px;
+  border-radius: 16px;
   border: none;
   background-color: #2c2c56;
   padding: 10px;
@@ -46,13 +46,19 @@ h2 {
 }
 
 .wrapper {
-  margin-top: 50px;
   background-color: #000;
   color: #fff;
   opacity: 0.6;
   border-radius: 25px;
   padding-top: 15px;
   padding-bottom: 25px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.wrapper-2{
+  max-width: 800px;
+  margin: 0 auto;
 }
 .current-weather {
   font-size: 80px;
