--- a/src/style.css
+++ b/src/style.css
@@ -1,111 +1,174 @@
 @import url("https://fonts.googleapis.com/css2?family=Koulen&family=Lato:wght@300;400&display=swap");
 body {
-  background-color: #f9f7fe;
+    background-color: #f9f7fe;
+}
+h1, h2{
+    font-family: "Koulen", cursive;
+}
+.app{
+    margin-top: 50px;
+    margin: 0 auto;
+    width: 1000px;
+    height: 700px;
+    background-color: #7f53ac;
+    background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 25px;
+    color: #fafafa;
+    font-family: "Lato", sans-serif;
 }
 
-h1,
-h2 {
-  margin-left: 50px;
-  font-family: "Koulen", cursive;
+.wrapper-1{
+    display: grid;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+.current-location{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    text-align: center;
+    margin-top: 30px;
+}
+.input-group{
+    width: 400px;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    margin-top: 30px;
 }
 
-.col {
-  width: 400px;
-  margin: 0 auto;
-  margin-top: -16px;
+.form-control{
+    margin-right: 10px;
 }
 
 .search-button {
-  border-radius: 16px;
-  border: none;
-  background-color: #2c2c56;
-  padding: 10px;
-  color: #ffffff;
+    border: none;
+    background-color: #2c2c56;
+    padding: 10px;
+    color: #ffffff;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .search-button:hover {
-  cursor: pointer;
-  background: #ffffff;
-  color: #2c2c56;
-}
-.form-control {
-  margin-right: 10px;
-}
-.app {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-.container {
-  color: #fafafa;
-  margin-top: 40px;
-  font-family: "Lato", sans-serif;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 25px;
-  padding: 50px 50px;
-  background-color: #7f53ac;
-  background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
+    cursor: pointer;
+    background: #ffffff;
+    color: #2c2c56;
 }
 
-.wrapper {
-  background-color: #000;
-  color: #fff;
-  opacity: 0.6;
-  border-radius: 25px;
-  padding-top: 15px;
-  padding-bottom: 25px;
-  max-width: 800px;
-  margin: 0 auto;
+.current-location{
+    margin-top: 36px;
+}
+.current-location a {
+    color: #ffffff;
+    padding: 12px 14px;
+    border-radius: 50%;
+    background-color: #2c2c56;
+}
+.current-location a:hover {
+    cursor: pointer;
+    background: #ffffff;
+    color: #2c2c56;
 }
 
 .wrapper-2{
-  max-width: 800px;
-  margin: 0 auto;
-}
-.current-weather {
-  font-size: 80px;
-}
-
-.temperature {
-  color: #ffffff;
-}
-.days {
-  padding: 10px 0;
-  max-width: 131px;
-  margin: 5px;
-  font-size: 20px;
-  background-color: #000;
-  color: #fff;
-  opacity: 0.6;
-  border-radius: 25px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    margin: 0 auto;
+    background-color: #2D2B54;
+    color: #C3C7F1;
+    border-radius: 25px;
+    width: 800px;
+    display: grid;
 }
 
-.this-week {
-  margin-top: 50px;
-  margin-bottom: 50px;
+.block-1{
+    margin: 50px 0 0 80px;
+    grid-row: 1/2;
+    grid-column: 1/2;
 }
 
-.converter-container {
-  margin-top: 20px;
+.current-weather{
+    display: grid;
+    margin-left: -40px;
+}
+.weather-emoji{
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+.weather-emoji img{
+    width: 150px;
+    height: 150px;
 }
 
-#fahrenheit-converter:hover,
-#celsius-converter:hover {
-  color: #ffb900;
+.current-temperature{
+    font-size: 64px;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    margin: 20px 0 0 -46px;
 }
 
-.current-location {
-  margin-left: 40px;
+.block-2{
+    grid-row: 1/2;
+    grid-column: 2/4;
+    display: grid;
+    margin-top: 50px;
 }
 
-.current-location a:hover {
-  cursor: pointer;
-  background: #ffffff;
-  color: #2c2c56;
+.block-2-section-1{
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+.block-2-section-2{
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+.block-2-section-3{
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+.block-2-section-4{
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+.block-2-section-5{
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+.block-2-section-6{
+    grid-row: 2/3;
+    grid-column: 3/4;
+}
+.this-week-header{
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    text-align: center;
 }
 
-.current-location a {
-  color: #ffffff;
-  padding: 10px;
-  border-radius: 50%;
-  background-color: #2c2c56;
+.day{
+    border-radius: 25px;
+    margin-left: 20px;
+    width: 113px;
+    text-align: center;
+    background-color: #2D2B54;
+    color: #C3C7F1;
+    padding: 10px 0;
 }
+
+.day-section-6{
+    margin-right: 20px;
+}
+.day-emoji img{
+    width: 50px;
+    height: 50px;
+}
+.this-week-header{
+    margin: 30px 0;
+}
+.this-week-section{
+    display: flex;
+    width: 800px;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+
