--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ h1, h2{
     padding: 10px;
     color: #C3C7F1;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 25px;
+    border-radius: 25px !important;
 }
 .search-button:hover {
     cursor: pointer;
