--- a/src/style.css
+++ b/src/style.css
@@ -141,6 +141,26 @@ h1, h2{
     grid-row: 2/3;
     grid-column: 3/4;
 }
+
+.unit-conversion-section {
+    font-size: 14px;
+    grid-row: 3/4;
+    grid-column: 4/5;
+
+}
+
+.unit-conversion-section a{
+    color: #C3C7F1;
+}
+
+.unit-conversion-section a:hover{
+    color: #7A5BB8;
+    text-decoration: none;
+}
+.unit-conversion-section .active{
+    color: #7A5BB8;
+    text-decoration: none;
+}
 .this-week-header{
     grid-row: 1/2;
     grid-column: 1/-1;
